# pythone-methods

./: file-reader.txt  myFile.txt  newFile.txt
dataTypes/: documents.txt  numbers.py  string-method.py  string.py  variables.py
dataTypes/Strings/: combind-string.py  string-section-exercise.py
dataTypes/boolean/: boolean.py
dataTypes/compression/: compression-section-exercise.py  compression.py
dataTypes/conditions/if-statement/: conditions.py  if-statement-section-exercise.py
dataTypes/decorators/: index.py
dataTypes/decorators/exercise/: index.py
dataTypes/dictionary/: dictionary-section-exercise.py  dictionary.py
dataTypes/error_handeling/: linter.py  try_except.py
dataTypes/error_handeling/exercise/: calculate.py  pyproject.toml
dataTypes/error_handeling/exercise/divide/: __init__.py  divide.py
dataTypes/error_handeling/exercise/exercise.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dataTypes/error_handeling/exercise/tests/: test_divide.py
dataTypes/fileio/: fileio.py
dataTypes/list/: list-section-exercise.py  list.py
dataTypes/loops/: common-operators.py  exsit-in-loops.py  for.py  list-comprehention.py
dataTypes/loops/while/: while.py  (+1 more)
dataTypes/methods/: anonymous-functions.py  exsit-tuple-in-function.py  functions.py  games.py  k-w-args.py
dataTypes/module-packages/: index.py  myMode.py  program_module.py
dataTypes/oop/: dunder.py  index.py  oop-exercise.py  perfshenal-oop.py
dataTypes/set/: set-section-exercise.py  set.py
dataTypes/tamrin-loops/: for.py  while.py
dataTypes/tuple/: tuple-exercise.py  tuple.py
(+20 files in other folders)
